# digitalgaz

./: .gitignore  pyproject.toml
digitalgaz/: config.py  main.py
digitalgaz/app/: __init__.py  app.py
digitalgaz/bot/: __init__.py  bot.py  handlers.py
digitalgaz/cv/: __init__.py  dimension.py  number.py  process.py
